--- a/package.json
+++ b/package.json
@@ -1,16 +1,41 @@
 {
-  "name": "ohmyfood",
+  "name": "p3_rhamoumi_salim",
   "version": "1.0.0",
   "description": "Site de reservation de restaurant en ligne",
   "main": "index.js",
+  "dependencies": {
+    "anymatch": "^3.1.2",
+    "chokidar": "^3.5.3",
+    "braces": "^3.0.2",
+    "immutable": "^4.0.0",
+    "binary-extensions": "^2.2.0",
+    "fill-range": "^7.0.1",
+    "glob-parent": "^5.1.2",
+    "is-extglob": "^2.1.1",
+    "is-binary-path": "^2.1.0",
+    "is-number": "^7.0.0",
+    "is-glob": "^4.0.3",
+    "normalize-path": "^3.0.0",
+    "picomatch": "^2.3.1",
+    "readdirp": "^3.6.0",
+    "sass": "^1.49.4",
+    "to-regex-range": "^5.0.1",
+    "source-map-js": "^1.0.2"
+  },
+  "devDependencies": {
+    "sass": "^1.49.4"
+  },
   "scripts": {
-    "sass": "sass --watch style.scss:style.css",
-    "prefix": "postcss style.css --use autoprefixer -d prefixed/"
+    "sass": "sass --watch sass/style.scss:style/style.css"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Salim-R/P3.git"
   },
   "author": "",
   "license": "ISC",
-  "browserslist": "last 4 versions",
-  "devDependencies": {
-    "sass": "^1.49.4"
-  }
+  "bugs": {
+    "url": "https://github.com/Salim-R/P3/issues"
+  },
+  "homepage": "https://github.com/Salim-R/P3#readme"
 }
